landing/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gun-landing
  labels:
    app: gun-landing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gun-landing
  template:
    metadata:
      labels:
        app: gun-landing
    spec:
      containers:
        - name: gun-landing
          image: ghcr.io/nnstd/gun-landing:v1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
