landing/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gun-landing
  labels:
    app: gun-landing
spec:
  type: ClusterIP
  selector:
    app: gun-landing
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
